# masters-thesis

./: Capture_inter2.pcap  Capture_inter3.pcap  README.md  Solution_map.md  Test_results  Test_results_DTLS  Test_results_QUIC  Test_results_local_DTLS  Test_results_local_QUIC  Test_results_local_TLS  db_parameters  heavy-snow.bag.info
Links/: Literature.md  links.md
solution/catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
solution/catkin_ws/devel/lib/iseauto_component/: iseauto_component
solution/catkin_ws/devel/lib/pkgconfig/: iseauto_component.pc
solution/catkin_ws/devel/share/iseauto_component/cmake/: iseauto_componentConfig.cmake
solution/catkin_ws/src/iseauto_component/: CMakeLists.txt  package.xml
solution/catkin_ws/src/iseauto_component/src/: main.cpp
solution/catkin_ws/src/iseauto_component/src/buffer/: NetworkBuffer.cpp  NetworkBuffer.h
solution/catkin_ws/src/iseauto_component/src/network/: DummyNetwork.cpp  DummyNetwork.h  NetworkInterface.h  NetworkInterfaceFactory.cpp  NetworkInterfaceFactory.h
solution/catkin_ws/src/iseauto_component/src/processor/: MainMessageProcessor.cpp  MainMessageProcessor.h
solution/protocol_testbed/: .dockerignore  .gitignore  CMakeLists.txt  ClientMain.cpp  Dockerfile  README.MD  ServerMain.cpp  TODO  docker-compose.yml  power_eval.sh  run.sh
solution/protocol_testbed/grapher/: grapher.py  grapher_cipher.py  grapher_list.py  grapher_protocol.py
solution/protocol_testbed/grapher/result/: README.md
solution/protocol_testbed/grapher/result/20210826-data-stream/: README.md
solution/protocol_testbed/grapher/result/TLS_local/client/: TLS  time.csv
solution/protocol_testbed/grapher/result/TLS_local/server/: TLS
solution/protocol_testbed/src/: Client.cpp  Client.h  Server.cpp  Server.h
solution/protocol_testbed/src/appProto/: FileSendHeader.h  ProtocolType.h  utils.h
solution/protocol_testbed/src/dtlsCookieVault/: ck_secrets_vault.c  ck_secrets_vault.h
solution/protocol_testbed/src/protocol/: DummyProtocol.cpp  DummyProtocol.h  MvfstProtocolQUIC.cpp  MvfstProtocolQUIC.h  MvfstProtocolQUIC2.cpp  MvfstProtocolQUIC2.h  OSProtocolTCP.cpp  OSProtocolTCP.h  OSProtocolUDP.cpp  OSProtocolUDP.h  OpenSSLProtocolDTLS.cpp  OpenSSLProtocolDTLS.h  OpenSSLProtocolTLS.cpp  OpenSSLProtocolTLS.h  ProtocolFactory.cpp  ProtocolFactory.h  ProtocolInterface.h  ProtocolType.h
solution/protocol_testbed/src/serverProtocol/: ServerInterface.h  ServerMvfstProtocolQUIC.cpp  ServerMvfstProtocolQUIC.h  ServerOSProtocolTCP.cpp  ServerOSProtocolTCP.h  ServerOSProtocolUDP.cpp  ServerOSProtocolUDP.h  ServerOpenSSLProtocolDTLS.cpp  ServerOpenSSLProtocolDTLS.h  ServerOpenSSLProtocolTLS.cpp  ServerOpenSSLProtocolTLS.h  ServerProtocolFactory.cpp  ServerProtocolFactory.h
solution/protocol_testbed/src/util/: CSV.h  CSVWriter.h  TimeRecorder.h  Timer.h
